--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>WDL (NARCOS)</title>
-  <link rel="stylesheet" href="quizcss.css">style="color: #white</a>
+  <link rel="stylesheet" href="quizcss.css"style="color: #white></a>
 </head>
 <body>
 <!-- partial:index.partial.html -->
