--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>WDL (NARCOS)</title>
-  <link rel="stylesheet" href="quizcss.css"style="color: #cc0000></a>
+  <link rel="stylesheet" href="quizcss.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1>Quiz By WDL (NARCOS) <b><a href="team.html">
+<h1>Quiz By WDL (NARCOS) <b><a href="team.html"style="color: #cc0000></a>>
   #OUR TEAM</a></b></h1>
 <div class="quiz-container">
   <div id="quiz"></div>
