--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1>Quiz By WDL (NARCOS) <b><a href="team.html"style="color: #cc0000></a>>
+<h1>Quiz By WDL (NARCOS) <b><a href="team.html"style="color: #cc0000></a>
   #OUR TEAM</a></b></h1>
 <div class="quiz-container">
   <div id="quiz"></div>
