--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-  
+<h1>Quiz By WDL (NARCOS) <b><a href="team.html">
+  #OUR TEAM</a></b></h1>
 <div class="quiz-container">
   <div id="quiz"></div>
 </div>
@@ -20,7 +21,6 @@
 
     <footer>
     
-<h1>Quiz By WDL (NARCOS) <b><a href="team.html">#OUR TEAM</a></b></h1>
   
 </footer>
     
