--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
-        
+<h3>Quiz By WDL (NARCOS) <b><a href="team.html">#OUR TEAM</a></b></h1>  
 
 
     
