--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-
+    <h1><b>Quiz By WDL (NARCOS) </b></h1>
 <div class="quiz-container">
   <div id="quiz"></div>
 </div>
@@ -18,9 +18,11 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
-<h3>Quiz By WDL (NARCOS) <b><a href="team.html">#OUR TEAM</a></b></h1>  
-
-
+    <footer>
+    <a href="team.html"><b>
+  #OUR TEAM</b></a>
+  
+</footer>
     
 </body>
 </html>
