--- a/team.html
+++ b/team.html
@@ -12,25 +12,26 @@
  
   <div class="team-section">
     <div class="inner-width">
-      <h1>Team ASH</h1>
+      <h1>Team NARCOS</h1>
       <div class="pers">
         <h3>A Group Of Technology Enthusiasts Who Are Willing To Learn New Things About Technology!</h3>  
         <div class="pe">
-          <img src="shubham.png" alt="">
-          <div class="p-name"><b>SHUBHAM SAWANT</b></div>
-          <div class="p-des"><b>Front-End Developer</b></div>
-          <div class="p-sm">
-          </div>
-        </div>
-        <div class="pe">
-          <img src="me.png" alt="">
+          <img src="me.png" alt="akhilesh bhagwat">
           <div class="p-name"><b>AKHILESH BHAGWAT</b></div>
           <div class="p-des"><b>Lead Developer</b></div>
           <div class="p-sm">
+          <div class="p-sm">
           </div>
         </div>
         <div class="pe">
-          <img src="hrishi.png" alt="">
+           <img src="shubham.png" alt="shubham sawant">
+          <div class="p-name"><b>SHUBHAM SAWANT</b></div>
+          <div class="p-des"><b>Front-End Developer</b></div>
+      
+          </div>
+        </div>
+        <div class="pe">
+          <img src="hrishi.png" alt="hrishikesh kurhade">
           <div class="p-name"><b>Hrishikesh Kurhade</b></div>
           <div class="p-des"><b>Data Research</b></div>
           <div class="p-sm">
