--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@
  
   <div class="team-section">
     <div class="inner-width">
-      <h1>Team ASH</h1>
+      <h1>Team NARCOS</h1>
       <div class="pers">
         <h3>A Group Of Technology Enthusiasts Who Are Willing To Learn New Things About Technology!</h3>
           <div class="pe">
